[project]
name = "rss-poster"
version = "0.1.0"
description = ""
authors = [
    {name = "atongjonathan",email = "atongjonathan@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8 (==2.0.4)",
    "beautifulsoup4 (==4.12.3)",
    "blinker (==1.7.0)",
    "bs4 (==0.0.2)",
    "certifi (==2024.2.2)",
    "charset-normalizer (==3.3.2)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "dnspython (==2.6.1)",
    "feedparser (==6.0.11)",
    "flask (==3.0.2)",
    "idna (==3.6)",
    "importlib-metadata (==7.0.1)",
    "itsdangerous (==2.1.2)",
    "jinja2 (==3.1.3)",
    "markupsafe (==2.1.5)",
    "pycodestyle (==2.11.1)",
    "pymongo (==4.6.2)",
    "pytelegrambotapi (==4.16.1)",
    "python-dotenv (==1.0.1)",
    "requests (==2.31.0)",
    "schedule (==1.2.1)",
    "sgmllib3k (==1.0.0)",
    "soupsieve (==2.5)",
    "telebot (==0.0.5)",
    "telegraph (==2.2.0)",
    "tomli (==2.0.1)",
    "urllib3 (==2.2.1)",
    "werkzeug (==3.0.1)",
    "zipp (==3.17.0)",
    "scrapy (>=2.13.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
